# zk_dcap_verifier_poc

./: .gitignore  Cargo.toml
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: dcap.rs  main.rs
methods/guest/src/dcap/: utils.rs
primitive-io/: Cargo.toml
