[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0", features = ["prove"] }
risc0-groth16 = { version = "0.21.0", features = ["prove"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = "1.0.197"

primitive-io = { path = "../primitive-io" }
hex = { version = "0.4.3" }
ciborium = { version = "0.2.2" }
chrono = { version = "0.4.31" }
